# scala-bazel

./: .bazelproject  .bazelrc  MODULE.bazel  README.md  WORKSPACE  maven_install.json  protobuf.patch
src/: BUILD  Main.scala
src/example/: Example.scala
